# surfer-project-rhdl

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  about.hbs  about.toml  accept_snapshots.bash  build.rs  default_config.toml  default_theme.toml  index.html  performance.surfer  pre-commit  tomldoc.toml  translation_test.py  update_spade_test  update_spade_test.bash
.gitlab/merge_request_templates/: default.md
assets/: manifest.json  sw.js
docs/: .gitignore  book.toml  generate_tomldoc
docs/src/: SUMMARY.md  configuration.md
examples/: counter.vcd  filelist.txt  hexadecimal.py  spade.vcd  spade_state.ron  surfer.pyi
misc/: release_checklist.md
src/: benchmark.rs  clock_highlighting.rs  command_prompt.rs  commands.rs  config.rs  cursor.rs  cxxrtl_container.rs  descriptors.rs  displayed_item.rs  drawing_canvas.rs  fast_wave_container.rs  files.rs  graphics.rs  help.rs  hierarchy.rs  keys.rs  logs.rs  main.rs  marker.rs  menus.rs  message.rs  mousegestures.rs  overview.rs  serialization_util.rs  signal_canvas.rs  signal_filter.rs  signal_name_type.rs  signal_type.rs  state_util.rs  statusbar.rs  time.rs  toolbar.rs  util.rs  variable_direction.rs  variable_name_filter.rs  variable_name_type.rs  variable_type.rs  view.rs  viewport.rs  wasm_api.rs  (+5 more)
src/cxxrtl/: command.rs  mod.rs  query_container.rs  timestamp.rs
src/remote/: client.rs  mod.rs  server.rs
src/tests/: mod.rs  snapshot.rs
src/translation/: basic_translators.rs  clock.rs  enum_translator.rs  mod.rs  numeric_translators.rs  pytranslator.rs  spade.rs
src/wcp/: wcp_handler.rs  wcp_server.rs
surfer/: Cargo.toml  Trunk.toml  build.rs  index.html
surfer-gtkwave-parser/: Cargo.toml
surfer-gtkwave-parser/src/: lib.rs
surfer-gtkwave-parser/tests/: file_tests.rs
surfer-gtkwave-parser/tests/files/: stimuli3.gtkw  with_8_bit_everything.gtkw  with_8_bit_one.gtkw
surfer-gtkwave-parser/tests/snapshots/: file_tests__parse_file@stimuli3.gtkw.snap  file_tests__parse_file@with_8_bit_everything.gtkw.snap  file_tests__parse_file@with_8_bit_one.gtkw.snap
surfer-spade-translator/: Cargo.toml
surfer-spade-translator/src/: lib.rs
surfer-translation-types/: Cargo.toml
surfer-translation-types/src/: field_ref.rs  lib.rs  python.rs  result.rs  scope_ref.rs  translator.rs  variable_ref.rs
surfer/assets/: integration.js
surfer/src/: benchmark.rs  clock_highlighting.rs  command_prompt.rs  config.rs  cxxrtl_container.rs  data_container.rs  dialog.rs  displayed_item.rs  drawing_canvas.rs  file_watcher.rs  graphics.rs  help.rs  hierarchy.rs  keys.rs  logs.rs  main.rs  marker.rs  menus.rs  message.rs  mousegestures.rs  overview.rs  server_file_selection.rs  state_util.rs  statusbar.rs  time.rs  toolbar.rs  transaction_container.rs  util.rs  variable_name_filter.rs  variable_name_type.rs  variable_type.rs  view.rs  viewport.rs  wasm_api.rs  wasm_panic.rs  wasm_util.rs  wave_container.rs  wave_data.rs  wave_source.rs  wellen.rs
surfer/src/cxxrtl/: query_container.rs  sc_message.rs  timestamp.rs
surfer/src/remote/: client.rs  mod.rs  server.rs
surfer/src/tests/: mod.rs  remote.rs  snapshot.rs  wcp.rs
surfer/src/translation/: basic_translators.rs  clock.rs  enum_translator.rs  instruction_translators.rs  mod.rs  numeric_translators.rs  plugin_translators.rs  python_translators.rs  spade.rs
surfer/src/wcp/: mod.rs  wcp_handler.rs  wcp_server.rs
surver/: Cargo.toml
surver/src/: lib.rs  logs.rs  main.rs  server.rs
themes/: dark+.toml  dark-high-contrast.toml  default.toml  gruvbox.toml  gruvbox_light.toml  ibm.toml  light+.toml  light-high-contrast.toml  okabe-ito.toml  solarized.toml  zenburn.toml
