[workspace]
resolver = "2"

members = [
    "surfer", "surver",
]
exclude = [
    ".cache", # include such that packages downloaded into the CI cache are ignored
    "f128",
    "fzcmd",
    "instruction-decoder",
]
default-members = ["surfer", "surver"]

[workspace.package]
version = "0.3.0-dev"
license = "EUPL-1.2"
categories = ["development-tools::debugging", "science"]
edition = "2021"

[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
debug = false

[workspace.dependencies]
surfer = { path = "surfer", default-features = false }
surver = { path = "surver", default-features = false }

bincode = "1.3.3"
bytesize = "1.3.0"
clap = { version = "4.5.8", features = ['derive'] }
color-eyre = "0.6.3"
fern = { version = "0.6.2", features = ["colored"] }
lazy_static = "1.5.0"
log = "0.4.22"
lz4_flex = "0.11.3"
serde_json = "1.0.120"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38", features = ["rt", "time", "macros"] }
web-time = "1.1.0"
wellen = { version = "0.9.14", features = ["serde1"] }
