[workspace]
resolver = "2"

members = ["surfer", "surfer-translation-types", "surver"]
exclude = [
  ".cache",              # include such that packages downloaded into the CI cache are ignored
  "f128",
  "ftr_parser",
  "fzcmd",
  "instruction-decoder",
]
default-members = ["surfer", "surver"]

[workspace.package]
version = "0.3.0-dev"
license = "EUPL-1.2"
categories = ["development-tools::debugging", "science"]
edition = "2021"
rust-version = "1.76"

[profile.release]
opt-level = 3 # fast and small wasm
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
debug = false

[workspace.dependencies]
surfer = { path = "surfer", default-features = false }
surver = { path = "surver", default-features = false }

bincode = "1.3.3"
bytesize = "1.3.0"
clap = { version = "4.5.8", features = ['derive'] }
color-eyre = "0.6.3"
derive_more = { version = "0.99.18", default-features = false, features = [
  "add",
  "add_assign",
  "mul",
  "display",
  "not",
] }
ecolor = "0.29.1"
emath = "0.29.1"
fern = { version = "0.6.2", features = ["colored"] }
lazy_static = "1.5.0"
log = "0.4.22"
lz4_flex = "0.11.3"
num = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.21.2", features = ["auto-initialize", "abi3"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38", features = ["rt", "time", "macros"] }
web-time = "1.1.0"
wellen = { version = "0.11.5", features = ["serde1"] }
