[package]
name = "surfer-spade-translator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
camino = { version = "1.1.6", features = ["serde1"] }
color-eyre = "0.6.3"
ecolor = { version = "0.27.2", features = ["serde"] }
extism-pdk = "1.2.0"
itertools = "0.13.0"
num = { version = "0.4", features = ["serde"] }
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_stacker = "0.1"
spade = { git = "https://gitlab.com/spade-lang/spade", rev = "2199e8438699a2566c3b3d24665fbd4644ba4e4d" }
spade-common = { git = "https://gitlab.com/spade-lang/spade", rev = "2199e8438699a2566c3b3d24665fbd4644ba4e4d" }
spade-hir-lowering = { git = "https://gitlab.com/spade-lang/spade", rev = "2199e8438699a2566c3b3d24665fbd4644ba4e4d" }
spade-types = { git = "https://gitlab.com/spade-lang/spade", rev = "2199e8438699a2566c3b3d24665fbd4644ba4e4d" }
surfer-translation-types = { path = "../surfer-translation-types" }
