[package]
name = "surfer-translation-types"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre.workspace = true
derive_more.workspace = true
ecolor.workspace = true
num.workspace = true
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3.workspace = true
