[package]
name = "surfer-translation-types"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
color-eyre.workspace = true
derive_more.workspace = true
ecolor.workspace = true
num.workspace = true
serde.workspace = true

[target.'cfg(target_family = "unix")'.dependencies]
pyo3.workspace = true
