[package]
name = "surfer"
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
build = "build.rs"
rust-version = "1.75"
description = "Waveform viewer for VCD, FST, and GHW"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode.workspace = true
bytes = "1.6.0"
bytesize.workspace = true
camino = { version = "1.1.6", features = ["serde1"] }
chrono = "0.4.31"
clap.workspace = true
color-eyre.workspace = true
config = { version = "0.14", default-features = false, features = ["toml"] }
derivative = "2.2.0"
derive_more.workspace = true
eframe = { version = "0.27.2", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui-remixicon = { version = "0.27.2", default-features = false }
egui_extras = { version = "0.27.2", default-features = false }
egui_plot = { version = "0.27.2", optional = true }
enum-iterator = "2.0"
f128 = { path = "../f128", optional = true }
fern.workspace = true
futures-core = "0.3.29"
futures-util = "0.3.29"
fuzzy-matcher = "0.3.7"
fzcmd = { path = "../fzcmd" }
half = "2.4.1"
instruction-decoder = { path = "../instruction-decoder" }
itertools = "0.13.0"
lazy_static.workspace = true
local-impl = "0.1.2"
log.workspace = true
lz4_flex.workspace = true
num.workspace = true
numeric-sort = "0.1.1"
pure-rust-locales = "0.8.1"
rayon = "1.10.0"
regex = "1.10.2"
reqwest = { version = "0.12.4", features = ["stream"] }
rfd = { version = "0.14.0", default-features = false, features = ["tokio", "xdg-portal"] }
ron = { version = "0.8.1", features = ["integer128"] }
serde.workspace = true
serde_json.workspace = true
serde_stacker = { version = "0.1", optional = true }
softposit = "0.4.0"
spade = { git = "https://gitlab.com/spade-lang/spade", rev = "1ea65cb7f09072ba8118dc0a70830d2352fbc71e", optional = true }
spade-common = { git = "https://gitlab.com/spade-lang/spade", rev = "1ea65cb7f09072ba8118dc0a70830d2352fbc71e", optional = true }
spade-hir-lowering = { git = "https://gitlab.com/spade-lang/spade", rev = "1ea65cb7f09072ba8118dc0a70830d2352fbc71e", optional = true }
spade-types = { git = "https://gitlab.com/spade-lang/spade", rev = "1ea65cb7f09072ba8118dc0a70830d2352fbc71e", optional = true }
surfer-translation-types = { path = "../surfer-translation-types" }
surver.workspace = true
sys-locale = "0.3.1"
tokio.workspace = true
toml = "0.8.12"
web-time.workspace = true
wellen.workspace = true

[features]
default = ["spade", "performance_plot"]
accesskit = ["eframe/accesskit", "eframe/web_screen_reader"]
f128 = ["dep:f128"]
spade = ["dep:spade", "dep:spade-common", "dep:spade-hir-lowering", "dep:spade-types", "dep:serde_stacker"]
performance_plot = ["dep:egui_plot"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
base64 = "0.22"
directories = "5.0"
futures = { version = "0.3.30", features = ["executor"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
toml = "0.8.12"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = ["Location", "UrlSearchParams"] }

[dev-dependencies]
dssim = "3.3.0"
egui_skia_renderer = { git = "https://gitlab.com/sornas/egui_skia_renderer" }
image = { version = "0.25", default-features = false, features = ["png"] }
project-root = "0.2.2"
rgb = "0.8.37"
skia-safe = "0.75.0"
test-log = "0.2.15"

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "git", "git2"] }
