[package]
name = "surver"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rand = "0.8.5"

bytesize.workspace = true
clap.workspace = true
color-eyre.workspace = true
bincode.workspace = true
fern.workspace = true
lazy_static.workspace = true
log.workspace = true
lz4_flex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
web-time.workspace = true
wellen.workspace = true
